# ai_ui_telegram_bot

./: .gitignore  README.md  ai_agent.py  env.example  prompt_generator.py  pyproject.toml  telegram_bot.py
sample_ui/: config_browser.yml  conftest.py  test_pw_for_python.py
sample_ui/pages/: pw_for_python_docs.py  pw_for_python_main.py
test_cases/: 123.json
